--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "biscolab/laravel-recaptcha": "^6.1",
         "laravel/framework": "^11.31",
+        "laravel/socialite": "^5.17",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
