--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "biscolab/laravel-recaptcha": "^6.1",
         "laravel/framework": "^11.31",
         "laravel/socialite": "^5.17",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "laravel/ui": "^4.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
